j17 build in pom